language/move-lang/tests/move_check/translated_ir_tests/signer/is_resource_copy_loc.exp
error: 

   ┌── tests/move_check/translated_ir_tests/signer/is_resource_copy_loc.move:3:9 ───
   │
 3 │         copy s
   │         ^^^^^^ Invalid 'copy' of owned resource value
   ·
 2 │     fun t(s: signer): signer {
   │              ------ The type: 'signer'
   ·
 2 │     fun t(s: signer): signer {
   │              ------ Is found to be a non-copyable type here
   │

