language/move-lang/tests/move_check/translated_ir_tests/signer/is_resource_copy_loc.move
module M {
    fun t(s: signer): signer {
        copy s
    }
}
// check: COPYLOC_RESOURCE_ERROR
